bug: fix small print spacing bug

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -324,7 +324,7 @@ fast-badge {
     display: inline;
 
     fast-divider {
-      padding-bottom: v.$base-px-unit * 3;
+      padding-bottom: v.$base-px-unit * 1.5;
     }
   }
 
